// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageLayout /> should render a fullscreen layout 1`] = `
<PageLayout
  layoutType="fullscreen"
>
  <div
    className="base fullscreen page-base"
  >
    <Region
      regionType="top"
    >
      <div
        className="top"
      >
        <div>
          1
        </div>
      </div>
    </Region>
    <Region
      regionType="content"
    >
      <div
        className="content"
      >
        <div>
          a
        </div>
      </div>
    </Region>
  </div>
</PageLayout>
`;

exports[`<PageLayout /> should render a profile layout 1`] = `
<PageLayout
  layoutType="profile"
>
  <div
    className="base profile page-base"
  >
    <Region
      regionType="top"
    >
      <div
        className="top"
      >
        <div>
          1
        </div>
      </div>
    </Region>
    <Region
      regionType="header"
    >
      <div
        className="header"
      >
        <div>
          a
        </div>
      </div>
    </Region>
    <Region
      regionType="content"
    >
      <div
        className="content"
      >
        <div>
          b
        </div>
      </div>
    </Region>
  </div>
</PageLayout>
`;

exports[`<PageLayout /> should render a simple layout 1`] = `
<PageLayout
  layoutType="profile"
>
  <div
    className="base profile page-base"
  >
    <Region
      regionType="top"
    >
      <div
        className="top"
      >
        <div>
          1
        </div>
      </div>
    </Region>
    <Region
      regionType="content"
    >
      <div
        className="content"
      >
        <div>
          a
        </div>
      </div>
    </Region>
  </div>
</PageLayout>
`;
